# SARibbon

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeListsSettings_fa83629.txt  CMakeListsSettings_jb83292.txt  CMakeListsSettings_lh80370.txt  CMakePresets.json  CMakeSettings.json  CMakelists.txt  Issues.txt  LICENSE  LionsGedankenGut.txt  MANIFEST.in  SARibbon.pro  SARibbon.sln  SARibbonBar.pri  SARibbonBar.pro  bash.exe.stackdump  build.md  changlog.md  common.pri  importSARibbonBarLib.pri  index.html  mkdocs.yml  project.py  pyproject-pyqt6.toml  pyproject.toml  readme-cn.md  readme.md  requirements-docs.txt  run_build.bat  submodule.md  update-record.md  vcpkg.json
ai_agent/: AI_Agent_Task_Template.md  (+1 more)
cmake/: CMakeLists.txt  CMakelists.txt  SARibbonBar.pri  SARibbonUtils.cmake  WinResource.cmake  common.pri  project-config-version.cmake.in  project-config.cmake.in
data/: settings.ini  (+2 more)
example/MainWindowExample/: ApplicationWidget.cpp  ApplicationWidget.h  ApplicationWidget.ui  CMakeLists.txt  MainWindowExample.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resouce.qrc  saribbonresouce.qrc
example/MdiAreaWindowExample/: CMakeLists.txt  MainWindow.ui  MdiAreaWindowExample.pro  README.md  icon.qrc  main.cpp  mdimainwindow.cpp  mdimainwindow.h
example/ThemeDesignerExample/: CMakeLists.txt  helpdialog.cpp  helpdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  syntaxhighlighter.cpp  syntaxhighlighter.h
example/uiform/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp  resource.qrc
pyside6/: CMakeLists.txt  pyproject.toml  saribbon_python_glue.h  typesystem_saribbon.xml
pyside6/PySideSARibbon/: __init__.py
src/GUI/: CMakeLists.txt  ballDTP.qrc  main.cpp  mainwindow.cpp  mainwindow.h
src/MultiTargetTracker/: CMakeLists.txt  main.cpp
src/MultiTargetTracker/Detector/: OCVDNNDetector.cpp  OCVDNNDetector.h  YoloDarknetDetector.h  YoloTensorRTDetector.h
src/MultiTargetTracker/Detector/darknet/src/: yolo_v2_class.cpp
src/MultiTargetTracker/Tracker/graph/: mytree.cpp  mytree.h
src/MultiTargetTracker/Tracker/graph/GTL/include/GTL/: biconnectivity.h  edge_map.h  maxflow_pp.h  min_tree.h  planarity.h  pq_node.h  ratio_cut_partition.h  st_number.h  symlist.h
src/MultiTargetTracker/Tracker/graph/GTL/src/: pq_tree.cpp  st_number.cpp
src/MultiTargetTracker/common/: object_types.h
src/MultiTargetTrackerLib/examples/: CMakeLists.txt  VideoExample.cpp  VideoExample.h  VideoExampleTest.cpp  VideoExampleTest.h
src/SARibbonBar/: .gitignore  CMakeLists.txt  CMakelists.txt  Doxyfile  FramelessHelper.cpp  FramelessHelper.h  SAFramelessHelper.cpp  SAFramelessHelper.h  SARibbonActionsManager.cpp  SARibbonActionsManager.h  SARibbonApplicationButton.cpp  SARibbonApplicationButton.h  SARibbonApplicationWidget.cpp  SARibbonApplicationWidget.h  SARibbonBar.cpp  SARibbonBar.h  SARibbonBar.pri  SARibbonBar.pro  SARibbonBarConfig.cmake.in  SARibbonBarLayout.cpp  SARibbonBarLayout.h  SARibbonBarVersionInfo.h  SARibbonBarVersionInfo.h.in  SARibbonButtonGroupWidget.cpp  SARibbonButtonGroupWidget.h  SARibbonButtonLayoutStrategy.cpp  SARibbonButtonLayoutStrategy.h  SARibbonCategory.cpp  SARibbonCategory.h  SARibbonCategoryLayout.cpp  SARibbonCategoryLayout.h  SARibbonCheckBox.cpp  SARibbonCheckBox.h  SARibbonColorToolButton.cpp  SARibbonColorToolButton.h  SARibbonComboBox.cpp  SARibbonComboBox.h  SARibbonContextCategory.cpp  SARibbonContextCategory.h  SARibbonControlButton.cpp  (+80 more)
src/SARibbonBar/Framelesswindow/: CMakeLists.txt
src/SARibbonBar/colorWidgets/: SAColorGridWidget.cpp  SAColorGridWidget.h  SAColorMenu.cpp  SAColorMenu.h  SAColorPaletteGridWidget.cpp  SAColorPaletteGridWidget.h  SAColorToolButton.cpp  SAColorToolButton.h  SAColorWidgets.pri  SAColorWidgetsGlobal.h
src/SARibbonBar/colorWidgets/tst/: Widget.cpp  Widget.h  Widget.ui  colorWidgetTst.pro  icon.qrc  main.cpp
src/SARibbonBar/doc/: SARibbonBar.pptx
src/SARibbonBar/i18n/: SARibbon_en_US.ts  SARibbon_zh_CN.ts
src/SARibbonBar/resource/: default.qss  office2013-px.qss  office2013.qss  removePNGWarning.py  theme-base.qss  theme-dark.qss  theme-dark2.qss  theme-office2013-em.qss  theme-office2013.qss  theme-office2016-blue.qss  theme-office2021-blue.qss  theme-win7.qss
src/SARibbonBar/resource/palettes/: dark-default.json  dark2-default.json  office2013-default.json  office2016-blue.json  office2016-dark.json  office2016-green.json  office2021-blue.json  office2021-dark.json  office2021-green.json  win7-default.json
src/SARibbonBar/resource/templates/: dark.qss  dark2.qss  office2013.qss  office2016.qss  office2021.qss  win7.qss
src/example/MainWindowExample/: CMakeLists.txt  CMakelists.txt  MainWindowExample.pro  main.cpp  mainwindow.cpp  mainwindow.h  saribbonresouce.qrc
src/example/NormalMenuBarExample/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  NormalMenuBarExample.pro  main.cpp
src/example/SimpleExample/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SimpleExample.pro  main.cpp
src/example/StaticExample/: .gitignore  CMakeLists.txt  MainWindow.cpp  StaticExample.pro  main.cpp
src/example/UseDesginerMainWindowExample/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  UseDesginerMainWindowExample.pro  main.cpp  mainwindow.ui  readme.md
src/example/WidgetWithRibbon/: CMakeLists.txt  InnerWidget.cpp  InnerWidget.h  MainWidget.h  RibbonWidget.h  Widget.cpp  Widget.h  Widget.ui  WidgetWithRibbon.pro  icon.qrc  main.cpp
src/example/WidgetWithRibbon/debug/: moc_predefs.h
tests/: CMakeLists.txt  SARibbonAlignmentTest.cpp  SARibbonBarEventFilterTest.cpp  SARibbonBarLayoutRTLTest.cpp  SARibbonButtonLayoutStrategyRTLTest.cpp  SARibbonCategoryLayoutRTLTest.cpp  SARibbonCategoryVisibilityTest.cpp  SARibbonContextCategoryRTLTest.cpp  SARibbonGalleryRTLTest.cpp  SARibbonLayoutDirectionChangeTest.cpp  SARibbonPanelLayoutRTLTest.cpp  SARibbonSystemButtonBarRTLTest.cpp  SARibbonToolButtonRTLTest.cpp  SARibbonUtilTest.cpp  ThemeCoverageTest.cpp
tests/auto/SARibbonThemePalette/: tst_themepalette.cpp
(+1182 files in other folders)
